[package]
name = "marchy"
version = "0.1.0"
authors = ["Naraenda <naraenda@prasetya.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultraviolet = "0.4.6"
crossterm = "0.17.7"
itertools = "0.9.0"
palette = "0.5.0"